Improve analysis performance and expand async/tx rules